syntax = "proto3";

option go_package = "./basket";

package basket;

service BasketService {
  rpc GetBasket (GetBasketRequest) returns (BasketResponse);
  
  rpc ClearBasket (ClearBasketRequest) returns (ClearBasketResponse);
}

message GetBasketRequest {
  string user_id = 1;
}

message BasketItem {
  string product_id = 1;
  int32  quantity = 2;
  double price = 3;      
}

message BasketResponse {
  string user_id = 1;
  repeated BasketItem items = 2;
  double total_price = 3;
}

message ClearBasketRequest {
  string user_id = 1;
}

message ClearBasketResponse {
  bool success = 1;
}

//protoc --go_out=. --go-grpc_out=. basket.proto